Possible work-around for gpu-overload flickring issue on Safari OSX.

--- a/dev/webapp/css/base.css
+++ b/dev/webapp/css/base.css
@@ -559,7 +559,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 	background: hsla(0, 0%, 10%, 0.6);
-	z-index: 9000;
+	z-index: 1;
 }
 
 .small-dialog [data-role="header"] {
